--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full screen background</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='style1.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
 <body>
     <header>
